<resources>
    <string name="app_name">buyMyShoes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="title_login">Login</string>
    <string name="email">Email</string>
    <string name="hint_login">Enter your email</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="welcome_next">Click continue to join us !</string>

    <string name="rules_text">
       When you visit shoe stores,\n
        as a client, do you pay attention to how the sales area is arranged: where is the checkout, where is the fitting area and is there enough of this area inside the store or there is a line of those who want to try on shoes, but cannot ;\n
        what kind of trade equipment and how it is located;\n
        Are the aisles between the trade equipment comfortable?\n
        These and many other questions are very important when designing a shoe and accessories store. Of course, all this is laid down at the stage of developing the design of the store and its adaptation to the area of ​​a specific room.\n
        We asked Marina Polkovnikova, a permanent SR expert in visual merchandising, shop window design and retail space, and speaker of the business program of the Euro Shoes Premiere Collection exhibition,\n
        to tell about the basic rules for designing a shoe store.</string>
    <string name="rules_title">Our Instructions</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="company_name">Company Name</string>
    <string name="add_new_item">Add New Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="add_item">Add Item</string>
    <string name="add_icon">add</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">LogOut</string>

</resources>