<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.example.buymyshoes.models.ShoeModel" />

        <variable
            name="viewModel"
            type="com.example.buymyshoes.viewModel.ShoeViewModel" />
    </data>
    <!-- Here we used LinearLayout  since we have shinsplints in our widgets -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        tools:context=".view.ShoeDetailsFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_item"
                android:textColor="@color/cardview_dark_background"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_name_edit_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/design_default_color_error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/item_name"
                        android:inputType="text"
                        android:text="@={shoe.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_company_edit_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/design_default_color_error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_company_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_name"
                        android:inputType="text"
                        android:text="@={shoe.companyName}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_description_edit_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextTextColor="@color/design_default_color_error">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_description_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/item_description"
                        android:inputType="text"
                        android:text="@={shoe.description}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_item_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/add_item"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:shadowColor="@color/black"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:theme="@style/AppTheme"

           />
        </LinearLayout>
    </LinearLayout>
</layout>