<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.example.buymyshoes.models.ShoeModel" />
    </data>
    <!-- we used ConstraintLayout because it get better performance and helps avoid nested layouts-->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.name}"
            app:layout_constraintBottom_toBottomOf="@id/textView1"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            android:layout_marginStart="@dimen/dp_15"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.companyName}"
            app:layout_constraintBottom_toBottomOf="@id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="@dimen/dp_15"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/shoe_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/shoe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.description}"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="@dimen/dp_15"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginTop="@dimen/dp_25"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>